# pytropicsquare

./: .gitignore  CHANGELOG.md  Doxyfile  LICENSE  README.md  network-server.py  networkspi-server.py  networkuartspi-server.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  spinettest.py  test.py  testNETCONFIG.py  testNETUART.py  testUART.py  uartspi.py  upyaestest.py  upytest.py
.github/workflows/: doxygen.yml  micropython-mpy.yml  mip-package.yml  publish-pypi.yml  sphinx-docs.yml  tests.yml
docs/: README.md  requirements.txt
docs/source/: conf.py  coverage.rst  examples.rst  index.rst  installation.rst  modules.rst  test_results.rst  testing.rst
examples/: 01_chip_info.py  02_hello_ping.py  03_random_numbers.py  10_ecc_key_management.py  11_ecdsa_signing.py  12_eddsa_signing.py  13_key_storage.py  20_memory_slots.py  21_monotonic_counters.py  30_config_basics.py  40_mac_and_destroy.py  README.md  esp32-hello.py  esp32_quickstart.py  ftdi_mpsse_quickstart.py  rpi_spidev_quickstart.py  tcp_model_quickstart.py
tests/: conftest.py
tests/fixtures/: chip_id_responses.py
tests/integration/: conftest.py  test_ecc.py  test_l2_basic.py  test_l3_commands.py  test_mac_and_destroy.py  test_memory.py  test_monotonic_counter.py  test_pairing_keys.py  test_ping_authorization.py  test_secure_session.py
tests/unit/: test_chip_id.py  test_crc.py  test_ecc.py  test_error_mapping.py  test_exceptions.py  test_ftdi_mpsse_transport.py  (+4 more)
tools/: uart-server.py
tropicsquare/: __init__.py  crc16.py  error_mapping.py  l2_protocol.py  session.py
(+99 files in other folders)
